# handling-spike-traffic-by-using-sqs

./: .gitignore  README.md  pyproject.toml
src/: main.py  schema.py  worker.py
src/common/: with_timeout.py
src/common/infrastructure/: uow.py
src/core/: config.py
